# rust-python-example

./: Cargo.toml  README.md  pyproject.toml
src/: lib.rs  myclass.rs
src/rustpy/: __init__.py  _core.pyi
